// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Tel renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      disabled={true}
      placeholder=" "
      type="tel"
      value="+372 123 4567"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      disabled={true}
      placeholder=" "
      type="tel"
      value="+372 123 4567"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        disabled={true}
        placeholder=" "
        type="tel"
        value="+372 123 4567"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Tel renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kBGJNX"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX igbTSY"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX fhOWWW"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Tel renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder=" "
      readOnly={true}
      type="tel"
      value="+372 123 4567"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      placeholder=" "
      readOnly={true}
      type="tel"
      value="+372 123 4567"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder=" "
        readOnly={true}
        type="tel"
        value="+372 123 4567"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      dir="rtl"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      dir="rtl"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        dir="rtl"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <label
        className="sc-eqKtKx uXXXN"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder="medium"
      type="tel"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <input
      className="sc-eZkcaX fHjCey"
      placeholder="large"
      type="tel"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX iAgEXF"
        placeholder="xlarge"
        type="tel"
      />
      <label
        className="sc-eqKtKx aGCUy"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX jwaXyu"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX hpzrQJ"
      placeholder="e.g. +372 123 4567"
      type="tel"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM eLTOhr"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
